--- a/pomo.html
+++ b/pomo.html
@@ -66,6 +66,6 @@
     
  </div>
 </div>
-<script type="text/javascript/ng-template" src="pomodoro.js"></script>
+<script type="text/javascript/ng-template" src="pomo.js"></script>
 </body>
 </html>
