--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
  </div>
 </div>
 <script type="text/javascript/ng-template" src="pomo.js"></script> 
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 </body>
 </html>
