--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
  </div>
 </div>
-<script type="text/javascript" src="pomo.js"></script> 
+<script src="https://raw.github.com/Case-y/pomodoro/gh-pages/pomo.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 </body>
 </html>
