--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     
  </div>
 </div>
-<script src="https://raw.github.com/Case-y/pomodoro/gh-pages/pomo.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="pomo.js"></script>
+
 </body>
 </html>
