--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href ="index.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css">
 </head>
 <body ng-app="pomodoro">
   <!-- Front Page -->
