--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="intro">
     <div class="banner">
     <h2 class="introduction"> Here is a Pomodoro Clock created by Casey! </br>
-        You can also contact him at <a href=#> kaze@berkeley.edu </a> </h2>
+        You can also contact him at <a href="mailto:kaze@berkeley.edu"> kaze@berkeley.edu </a> </h2>
       <hr class="side"></hr>
     </div>
  </div>
